# mcp-starter-kit

./: .gitignore  GETTING_STARTED.md  README.md  justfile  mcp-config.json  nx.json  package.json  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
chat/: index.html  package.json  tsconfig.backend.json  tsconfig.backend.tsbuildinfo  vite.config.ts  vite.config.ts.bak
chat/src/: styles.css
chat/src/app/: app.module.css  app.tsx
chat/src/app/components/: ChatInterface.module.css  ChatInterface.tsx  ServerManager.module.css  ServerManager.tsx
chat/src/app/services/: MCPManager.ts  OllamaClient.ts
chat/src/backend/: mcp-manager.ts  server.ts
clients/: .gitignore
clients/mcp-client-test/: package.json
clients/mcp-client-test/src/: main.ts
examples/: README.md
examples/extensions/: README.md
libs/mcp-utils/: README.md  package.json
libs/mcp-utils/src/: index.ts
libs/mcp-utils/src/lib/: mcp-utils.ts
servers/: .gitignore
servers/greeting-server/: index.js  package.json
servers/mcp-server-filesystem/: package.json
servers/mcp-server-filesystem/src/: main.ts
servers/mcp-server-web-python/: pyproject.toml  requirements.txt
servers/mcp-server-web-python/src/: main.py
