[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-web"
version = "1.0.0"
description = "Web scraping MCP server"
authors = [{name = "MCP Playground", email = "example@example.com"}]
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
requires-python = ">=3.8"

[project.scripts]
mcp-server-web = "main:main"